Fix glossary modal backdrop darkness in dark mode

--- a/templates/css/style.scss
+++ b/templates/css/style.scss
@@ -300,7 +300,7 @@ $width-main-column: 860px;
 	}
 
 	dialog::backdrop{
-		backdrop-filter: blur(3px) contrast(0.9) brightness(0.2) grayscale(0.2)!important;
+		backdrop-filter: blur(3px) contrast(0.9) brightness(0.4) grayscale(0.2)!important;
 	}
 }
 
